--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -55,6 +55,22 @@
   cursor: pointer;
 }
 
+.buttonsecondarysmallcolor {
+  background-color: transparent;
+  height: 43px;
+  padding: 12px 24px;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.2px;
+  color: #363352;
+  border: 0.1px solid var(--secondary-500);
+  filter: drop-shadow(0px 15px 40px rgba(35, 34, 99, 0.15));
+  border-radius: 999px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 .buttonarrow {
   display: flex;
   align-items: center;
