--- a/src/views/detail/PanelSection/PanelSection.module.css
+++ b/src/views/detail/PanelSection/PanelSection.module.css
@@ -6,7 +6,6 @@
 .main {
 	display: grid;
 	grid-template-columns: 1fr;
-	margin-bottom: var(--section-margin-mobile);
 }
 
 .image_container img {
@@ -18,6 +17,11 @@
 	color: var(--primary-500);
 }
 
+.main_container>p {
+	font-size: 18px;
+	color: var(--grey-900);
+}
+
 .main_container_item {
 	padding-bottom: 20px;
 }
@@ -27,7 +31,13 @@
 	color: var(--secondary-500);
 	font-size: 18px;
 	line-height: 22px;
-	font-weight: 500;
+	/* font-weight: 500; */
+}
+
+.main_container2>h3 {
+	color: var(--secondary-500);
+	font-size: 20px;
+	font-weight: 600;
 }
 
 .div_line {
@@ -81,6 +91,10 @@
 	padding-top: 0;
 }
 
+.main_container2 {
+	padding-top: 24px;
+}
+
 .main_container_item2 {
 	display: grid;
 	grid-template-columns: auto 1fr;
@@ -90,7 +104,7 @@
 	color: var(--secondary-500);
 	font-size: 18px;
 	line-height: 22px;
-	font-weight: 500;
+	/* font-weight: 500; */
 }
 
 .slider_wrapper {
@@ -119,7 +133,6 @@
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 25px;
 		align-items: center;
-		margin-bottom: var(--section-margin-desktop);
 	}
 
 	.main_container {
@@ -139,11 +152,11 @@
 		grid-template-columns: auto 1fr;
 		align-items: center;
 		grid-gap: 10px;
-		padding: 16px 0;
-		color: var(--secondary-500);
+		/* padding: 16px 0; */
+		color: var(--grey-800);
 		font-size: 18px;
 		line-height: 22px;
-		font-weight: 500;
+		/* font-weight: 500; */
 	}
 
 	.div_line {
@@ -157,7 +170,7 @@
 	}
 
 	.pad {
-		padding-top: 40px;
+		padding-top: 30px;
 	}
 
 	.button_wrapper {
@@ -176,7 +189,3 @@
 	}
 
 }
-
-
-
-
