--- a/src/views/home/Home.module.css
+++ b/src/views/home/Home.module.css
@@ -1,5 +1,7 @@
 .fullpage {
-  display: grid;
+  /* display: grid; */
+  display: flex;
+  flex-direction: column;
   gap: 50px;
   overflow: hidden;
 }
