--- a/src/components/home/HireMessage/HireMessage.module.css
+++ b/src/components/home/HireMessage/HireMessage.module.css
@@ -140,7 +140,7 @@
         text-align: left;
 
         /* styles arabe; */
-        /* text-align: right; */
+        text-align: right;
     }
 
     .title {
