--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -93,7 +93,7 @@
   align-items: start;
 
   /* styles arabe; */
-  align-items: end;
+  /* align-items: end; */
 }
 
 
@@ -158,7 +158,7 @@
   padding-right: 70px;
 
   /* styles arabe; */
-  align-items: start;
+  /* align-items: start; */
 }
 
 .cardbannerinformative h2 {
