--- a/src/components/home/Details/Details.module.css
+++ b/src/components/home/Details/Details.module.css
@@ -43,7 +43,7 @@
 	.details {
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 60px;
-		/* align-items: center; */
+		align-items: center;
 	}
 
 	.content {
@@ -54,7 +54,6 @@
 		font-size: 20px;
 		color: var(--secondary-500);
 		font-weight: 500;
-		padding-top: 90px;
 	}
 
 	.viewCenter {
