--- a/src/components/home/Details3/Details3.module.css
+++ b/src/components/home/Details3/Details3.module.css
@@ -2,21 +2,61 @@
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-gap: 25px;
-	margin-bottom: var(--section-margin-mobile);
+	align-items: center;
 }
 
 .content {
 	grid-row: 1;
 }
 
+.content>p {
+	font-size: 18px;
+	color: var(--secondary-500);
+	font-weight: 500;
+}
+
+.viewCenter {
+	background-color: var(--primary-500);
+	color: white;
+	font-size: 16px;
+	padding: 18px 30px;
+	letter-spacing: 0.2px;
+	border-radius: 100px;
+	font-weight: 600;
+	height: 58px;
+	box-shadow: 4px 8px 24px rgba(0, 152, 58, 0.25);
+	width: 100%;
+	margin-top: 24px;
+}
+
+.viewCenter:hover {
+	background-color: var(--primary-400);
+}
+
 @media (min-width: 1024px) {
 	.details {
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 60px;
-		margin-bottom: var(--section-margin-desktop);
 	}
 
 	.content {
 		grid-row: auto;
 	}
+
+	.content>p {
+		font-size: 20px;
+		color: var(--secondary-500);
+		font-weight: 500;
+	}
+
+	.viewCenter {
+		width: 45%;
+	}
+}
+
+@media (min-width: 1245px) {
+	.content>p {
+		font-size: 24px;
+	}
+
 }
