--- a/src/components/home/Details3/DetailsOptions/DetailOption.module.css
+++ b/src/components/home/Details3/DetailsOptions/DetailOption.module.css
@@ -1,12 +1,11 @@
-
 .detail_option {
 	display: grid;
 	grid-template-columns: auto 1fr;
 	grid-gap: 15px;
-	min-height: 127px;
+	/* min-height: 127px; */
 }
 
-.subtitle_container{
+.subtitle_container {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -19,9 +18,9 @@
 	color: var(--textos);
 }
 
-@media (min-width: 1024px){
+/* @media (min-width: 1024px){
 
 	.detail_option {
 		min-height: 127px;
 	}
-}
+} */
